--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ body {
   outline: transparent;
   font-size: 12px;
   line-height: 1.15;
-  /* color: rgba(117, 117, 117, 0.5); */
+  color: rgba(117, 117, 117, 0.5);
   resize: none;
 }
 
@@ -809,6 +809,9 @@ body {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   outline: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-form-input:focus {
